--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -2,105 +2,176 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+  
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+  top: 
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
-.logo {
-	width: 180px;
-	height: 40px;
-	background: white;
-	font-size: 80px;
-	padding: 1px;
-	border: 1px;
-	margin: 1px;
-	display: inline-block;
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	bottom:;
-	left:;  
-  }
-  
-  .cta-text {
-	width: 150px;
-	height: 150px;
-	font-size: 70px;
-	padding: 1px;
-	border: 1px;
-	margin: 1px;
-	position: relative;
-	top: 200px;
-	left: 300px;
-  }
-  
-  .image {
-	height: 450px;
-	width: 450px;
-	padding: 1px;
-	border: 1px;
-	margin: 1px;
-	top: 200px;
-	right: 300px;
-	display: inline-block;
-	position: absolute;
-  }
-  
-  html, body, div, span, applet, object, iframe,
-  h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-  a, abbr, acronym, address, big, cite, code,
-  del, dfn, em, img, ins, kbd, q, s, samp,
-  small, strike, strong, sub, sup, tt, var,
-  b, u, i, center,
-  dl, dt, dd, ol, ul, li,
-  fieldset, form, label, legend,
-  table, caption, tbody, tfoot, thead, tr, th, td,
-  article, aside, canvas, details, embed, 
-  figure, figcaption, footer, header, hgroup, 
-  menu, nav, output, ruby, section, summary,
-  time, mark, audio, video {
-	  margin: 0;
-	  padding: 0;
-	  border: 0;
-	  font-size: 100%;
-	top: 
-	  font: inherit;
-	  vertical-align: baseline;
-  }
-  /* HTML5 display-role reset for older browsers */
-  article, aside, details, figcaption, figure, 
-  footer, header, hgroup, menu, nav, section {
-	  display: block;
-  }
-  body {
-	  line-height: 1;
-  }
-  ol, ul {
-	  list-style: none;
-  }
-  blockquote, q {
-	  quotes: none;
-  }
-  blockquote:before, blockquote:after,
-  q:before, q:after {
-	  content: '';
-	  content: none;
-  }
-  table {
-	  border-collapse: collapse;
-	  border-spacing: 0;
-  }
-  
-  /* Set every element's box-sizing to border-box */
-  * {
-	  box-sizing: border-box;
-  }
-  
-  html, body {
-	  height: 100%;
-	  font-family: 'Titillium Web', sans-serif;
-  }
-  
-  h1, h2, h3, h4, h5 {
-	  font-family: 'Bangers', cursive;
-	  letter-spacing: 1px;
-	  margin-bottom: 15px;
-  }
-  
+/* Set every element's box-sizing to border-box */
+* {
+	box-sizing: border-box;
+}
+
+html, body {
+	height: 100%;
+	font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+	font-family: 'Bangers', cursive;
+	letter-spacing: 1px;
+	margin-bottom: 15px;
+}
+
+/* container */
+
+.class container {
+display: flex;
+justify-content:;
+}
+
+/* header nav */
+
+header nav {
+display: flex;
+justify-content: flex-start;
+align-items:;
+flex-direction:;
+}
+
+header nav a {
+display: flex;
+justify-content: flex-start;
+align-items:;
+font-size: 14px;
+color: gray;
+}
+
+header nav a:hover {
+text-decoration: underline;
+}
+
+header nav a:first-child {
+margin-left: 0;
+}
+
+header nav a:first-child {
+margin-right: 0;
+}
+
+/* header logo */
+
+header .logo {
+display: flex;
+justify-content: flex-end;
+align-content:;
+flex-wrap:;
+}
+
+/* cta */
+
+.cta .cta-text {
+display: flex;
+font-size: 77px;
+justify-content: center;
+}
+
+.cta .cta-text button {
+background: white;
+font-size: 17px;
+display: flex;
+justify-content:;
+align-items:;
+}
+
+.cta .cta-text button:hover {
+background: black;
+color: white;
+}
+
+.cta img {
+display: flex;
+}
+
+/* main content */
+
+.main-content {
+display: flex;
+}
+
+.main-content .top-content {
+}
+
+.main-content .top-content .text-content {
+display: flex
+}
+
+.main-content .top-content .text-content:last-child {
+margin-right: 0;
+}
+
+.main-content .middle-img {
+display: flex;
+}
+
+.main-content .bottom-content {
+}
+
+.main-content .bottom-content .text-content {
+width: 275px;
+display: flexbox
+}
+
+.contact {
+display: flex;
+}
+
+.contact p {
+display: flex;
+}
+
+footer {
+display: flex;
+}
+
